# deep-research-quickstart

./: .gitignore  a.html  b.html  langgraph.json  main.py  prompt_generate.ipynb  pyproject.toml  quickstart.ipynb
src/agents/: researcher.py
src/models/: chat_model.py
src/prompts/: template.py
src/prompts/templates/: rag_system_prompt.jinja-md
src/tools/: web_crawl.py  web_search.py
src/tools/models/: chat_model.py
