[project]
name = "deep-research-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=2.9.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.24",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.27",
    "socksio>=1.0.0",
]
